# General

./: Grover.scala  LICENSE  README.md  jam-presentation.ppt
benchmark/: blazing-sql-result.txt  test-blazing.py
benchmark/load-pilosa/: bl.py  copy-pilosa.sh  gen-pilosa.sh  gendata.py  import.sh  make-index.sh  make-query-mult.py  make-query-sep.py  make-query-union.py  query.sh  start-pilosa.sh
golaytest/: Cargo.toml  README.txt
golaytest/src/: main.rs
lyre-tune/: delphic_1_sec_1.txt  hava.txt  hurrian-compressed.txt  hurrian.txt  iliad-scan.txt  iliad.txt  m.css  m.html  m.js  m2.html  m_v1.html  m_v2.html  m_v3.html  m_v4.html  pythagorean-comma.txt  seikilos.txt  shruti.txt
lyre-tune/specific/: chromatic-cf.html  chromatic-cfg.html  dutar.html  enharmonic.html  kirar.html  pentatonic.html  phorminx.html
qm/: README.md  pauli.txt
qm/grover2d/: .cache-main  .classpath  .gitignore  .project  README.md  pom.xml
qm/grover3d/: .cache-main  .classpath  .gitignore  .project  README.md  pom.xml
rdf/: socrates-influencer.txt
restapitest/: test.sh  test100.sh  test1000.sh
restapitest/flask/: f.py
restapitest/hello-rocket/: Cargo.toml
restapitest/hello-rocket/src/: main.rs  redis_connection.rs
sinaiticus/: join-pdf.py  parse_sinaiticus_split.py  split-tan.py
sug-demo/ksql/: kafka-commands.txt  ksql-commands.txt  (+1 more)
tafl/: TaflGame.py  Test.py
topical/: LICENSE.md  README.md  byline-w1.txt  byline-w2.txt  copy-b-merged.sh  copy-merged.sh  copy-y-merged.sh  lda-byline.py  lda.py  output-b-1.txt  output-b-2.txt  output-b-y-3.txt  output-b-y-4.txt
(+31 files in other folders)
