[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
redis = "0.21.5"
r2d2 = "0.8.9"
r2d2_redis = "0.14.0"
async-trait = "0.1.52"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]


